syntax = "proto3";

import "google/protobuf/timestamp.proto";

package blog;
option go_package = "gRPC-blog-app/pb";

message Address {
  string id = 1;
  string city = 2;
  string country = 3;
  string zip_code = 4;
  string postal_address = 5;
  google.protobuf.Timestamp created = 6;
  google.protobuf.Timestamp updated = 7;
}

message Blog {
  string id = 1;
  string title = 2;
  string content = 3;
  // list of authors
  repeated Author author_id = 4;
  google.protobuf.Timestamp created = 5;
  google.protobuf.Timestamp updated = 6;
}

message Author {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  // list of addresses
  repeated Address address_id = 5;
  // list of blog items
  repeated Blog blog_id = 6;
  google.protobuf.Timestamp created = 7;
  google.protobuf.Timestamp updated = 8;
}
